Solved cannot spacing

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html, body{
     padding: 0;
     margin: 0 auto;
@@ -18,4 +24,9 @@ html, body{
 h1, h2, h3, h4{
     font-family: 'Lobster', cursive;
 }
+
+#result{
+    white-space: pre-line;
+}
+
 
